--- a/animais-e-florestas_inicio/css/style.css
+++ b/animais-e-florestas_inicio/css/style.css
@@ -29,11 +29,6 @@ ul li a {
 	letter-spacing: 2px;
 }
 
-ul li a.active {
-	background-color: #56CC9D;
-	color: white;
-	border-color: #56CC9D;
-}
 
 h1, h2, h3 {
 	font-family: 'Playfair Display';
@@ -129,7 +124,7 @@ img {
 	float: left;
 }
 
-.js .item {
+[data-target] {
 	opacity: 0;
 	position: absolute;
 	top: 0;
@@ -137,7 +132,13 @@ img {
 	transform: translate3d(-50px, 0, 0);
 }
 
-.js .item.active {
+[data-click].active {
+	background-color: #56CC9D;
+	color: white;
+	border-color: #56CC9D;
+}
+
+[data-target].active {
 	opacity: 1;
 	position: relative;
 	top: auto;
